<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.reavershark.gravitymeter.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gravity_x"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/gravxTxtView"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gravity_y"
        android:id="@+id/gravyTxtView"
        android:layout_below="@+id/gravxTxtView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gravity_z"
        android:id="@+id/gravzTxtView"
        android:textSize="20sp"
        android:layout_below="@+id/gravyTxtView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/pointerFrameLayout">

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:id="@+id/pointerImageView"
            android:layout_gravity="center"
            android:contentDescription="@string/pointerContentDescr" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/centerFramelayout">

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:id="@+id/centerImageView"
            android:contentDescription="@string/center_indicatorContentDescr"
            android:scaleType="fitXY"
            android:layout_gravity="center" />
    </FrameLayout>

</RelativeLayout>
